syntax = "proto3";

package notes;

option go_package = "notespb";

message Note {
    string id = 1;
    string title = 2;
    string creator = 3;
    string description = 4;
}

message CreateNoteRequest {
    string token = 1;
    Note note_details = 2;
}

message CreateNoteResponse {
    string message = 1;
    Note note_details = 2;
}

message GetNoteRequest {
    string token = 1;
    string email = 2;
}

message GetNoteResponse {
    string message = 1;
    repeated Note note_details = 2;
}

message NoteRequest {
    string token = 1;
}

message NoteResponse {
    string message = 1;
    repeated Note note_details = 2;
}

service Notes {
    rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {};
    rpc GetNoteByEmail(GetNoteRequest) returns (GetNoteResponse) {};
    rpc GetNote(NoteRequest) returns (NoteResponse) {};
}